[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0", features = [ "lexer" ] }
regex = { version = "1", features = ["unicode-perl"] }
itertools = "0"

[build-dependencies]
lalrpop = { version = "0", features = [ "lexer" ] }

[dev-dependencies]
indoc = "2"

[dependencies.eqlog-runtime]
path = "../../eqlog-runtime"

[build-dependencies.eqlog]
path = "../../eqlog"
